// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`opencog-atomspace - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Helps developers work with OpenCog AtomSpace hypergraph database for AGI. Use when building/deploying AtomSpace on Azure (VMs, AKS, storage), implementing pattern matching, graph rewriting, Atomese programming, or configuring distributed AtomSpace (DAS). USE FOR: install atomspace, build atomspace, atomspace azure, pattern matching, query engine, DAS setup, atomspace c++ api. DO NOT USE FOR: cogutil (use opencog-cogutil).",
  "extractedKeywords": [
    "aks",
    "atomese",
    "atomspace",
    "authentication",
    "azure",
    "build",
    "building",
    "cli",
    "cogutil",
    "configuring",
    "container",
    "database",
    "deploy",
    "deploying",
    "developers",
    "distributed",
    "engine",
    "graph",
    "helps",
    "hypergraph",
    "identity",
    "implementing",
    "install",
    "key vault",
    "matching",
    "monitor",
    "networking",
    "opencog",
    "opencog-cogutil",
    "pattern",
    "programming",
    "query",
    "redis",
    "rewriting",
    "security",
    "setup",
    "sql",
    "storage",
    "when",
    "with",
    "work",
  ],
  "name": "opencog-atomspace",
}
`;

exports[`opencog-atomspace - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "atomese",
  "atomspace",
  "authentication",
  "azure",
  "build",
  "building",
  "cli",
  "cogutil",
  "configuring",
  "container",
  "database",
  "deploy",
  "deploying",
  "developers",
  "distributed",
  "engine",
  "graph",
  "helps",
  "hypergraph",
  "identity",
  "implementing",
  "install",
  "key vault",
  "matching",
  "monitor",
  "networking",
  "opencog",
  "opencog-cogutil",
  "pattern",
  "programming",
  "query",
  "redis",
  "rewriting",
  "security",
  "setup",
  "sql",
  "storage",
  "when",
  "with",
  "work",
]
`;
